feat: 멘토링 신청 UI 구현 및 API 연동

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="mentoring_guideline">멘토링받으러 가기</string>
     <string name="user_mentoring_recommend">나에게 맞는 멘토를 추천해줘요</string>
     <string name="favorite_mentor">인기 멘토</string>
+    <string name="apply_mentor">신청하기</string>
 </resources>
